GNOME Bugzilla – Bug 692483
Fix launching settings panels
Last modified: 2013-02-18 18:17:10 UTC
Upstream gnome-control-center is planning on removing gnomecc.menu. While gnome-shell needs it for search, and while gnome-control-center is planning on having its own search provider, we can stop using gnomecc.menu for launching settings panels.
Created attachment 234346 [details] [review] app-system: Remove unused get_settings_tree method The last use for this is long-gone.
Created attachment 234347 [details] [review] Use the standard apps tree for gnome-control-center panels desktop files gnome-control-center is planning on removing its own tree in the future. Since it already installs these applications into /usr/share/applications, just use this for now.
Created attachment 234348 [details] [review] appDisplay: Remove settings provider gnome-control-center now ships its own settings provider.
Created attachment 234349 [details] [review] app-system: Remove settings tree and the rest of the settings support
Review of attachment 234346 [details] [review]: Right.
Review of attachment 234348 [details] [review]: Looks right to me.
Review of attachment 234349 [details] [review]: A lot of code deleted, nice.
Review of attachment 234347 [details] [review]: Looks right.
Attachment 234346 [details] pushed as f2ba49f - app-system: Remove unused get_settings_tree method Attachment 234347 [details] pushed as 5d1de33 - Use the standard apps tree for gnome-control-center panels desktop files I can't push the settings provider removal as the gnome-control-center provider hasn't been added yet.
(In reply to comment #9) > Attachment 234346 [details] pushed as f2ba49f - app-system: Remove unused > get_settings_tree method > Attachment 234347 [details] pushed as 5d1de33 - Use the standard apps tree for > gnome-control-center panels desktop files > > > I can't push the settings provider removal as the gnome-control-center provider > hasn't been added yet. And there is a good chance it will not be added (see bug 690577 and 690824 - indeed, you were the one saying that settings needs special casing...)
We've decided that the only special casing that should happen is that it should always be applied first, and that it won't appear in the control center. That is: let providers = settings.get_strv('remote-providers'); providers.unshift('gnome-control-center-search-provider'); RemoteSearch.loadProviders(...);
*** Bug 693429 has been marked as a duplicate of this bug. ***
Is there anything left here?
Fixed by Giovanni.