js/ui/userMenu.js
@@ -822,7 +822,7 @@ const UserMenuButton = new Lang.Class({
 
     _onMyAccountActivate: function() {
         Main.overview.hide();
-        let app = Shell.AppSystem.get_default().lookup_setting('gnome-user-accounts-panel.desktop');
+        let app = Shell.AppSystem.get_default().lookup_app('gnome-user-accounts-panel.desktop');
         app.activate();
     },
 
